Fixed bug #381, re-design find;
Fixed export dropdown panel move down with scrollbar issue.

--- a/RS/Reporting/ReportManager/ReportManagerMVC/ReportManager/Forerunner/ReportViewer/css/ReportPrint.css
+++ b/RS/Reporting/ReportManager/ReportManagerMVC/ReportManager/Forerunner/ReportViewer/css/ReportPrint.css
@@ -19,7 +19,7 @@
     height: 100%;
     margin-left: auto;
     margin-right: auto;
-    overflow-y:scroll;
+    overflow-y:auto;
     overflow-x:hidden;
     background: rgb(176,192,210); /* Old browsers */
     /* IE9 SVG, needs conditional override of 'filter' to 'none' */
